# PythonProject

./: README.md  cursor_python.md
hw01/: .gitignore  pyproject.toml
hw01/src/hw01/: __init__.py  nqueens.py
hw01/tests/: __init__.py  test_nqueens.py
hw02/task01/: 导读_ WildBench：利用真实用户在实际环境中的挑战性任务对学习学习模型进行基准测试.md
hw02/task02/: README.md  chatbot.py
